@@ -1,9 +1,9 @@
 # --
 # Kernel/System/DB/db2.pm - db2 database backend
-# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # Modified for DB2 UDB Friedmar Moch <friedmar@acm.org>
 # --
-# $Id: db2.pm,v 1.24 2007-10-02 10:36:03 mh Exp $
+# $Id: db2.pm,v 1.25 2008-01-02 14:56:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -16,7 +16,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.24 $) [1];
+$VERSION = qw($Revision: 1.25 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -36,12 +36,15 @@ sub LoadPreferences {
     my ( $Self, %Param ) = @_;
 
     # db settings
-    $Self->{'DB::Limit'}          = 0;
-    $Self->{'DB::DirectBlob'}     = 0;
-    $Self->{'DB::QuoteSingle'}    = '\'';
-    $Self->{'DB::QuoteBack'}      = 0;
-    $Self->{'DB::QuoteSemicolon'} = '';
-    $Self->{'DB::Attribute'}      = {
+    $Self->{'DB::Limit'}             = 0;
+    $Self->{'DB::DirectBlob'}        = 0;
+    $Self->{'DB::QuoteSingle'}       = '\'';
+    $Self->{'DB::QuoteBack'}         = 0;
+    $Self->{'DB::QuoteSemicolon'}    = '';
+    $Self->{'DB::NoLikeInLargeText'} = 0;
+
+    # dbi attributes
+    $Self->{'DB::Attribute'} = {
         LongTruncOk => 1,
         LongReadLen => 100 * 1024,
     };
@@ -56,7 +59,10 @@ sub LoadPreferences {
     $Self->{'DB::Comment'}     = '-- ';
     $Self->{'DB::ShellCommit'} = ";\n";
 
-    #    $Self->{'DB::ShellConnect'} = '';
+    #$Self->{'DB::ShellConnect'} = '';
+
+    # init sql setting on db connect
+    #$Self->{'DB::Connect'} = '';
 
     return 1;
 }
