@@ -1,8 +1,8 @@
 # --
 # Kernel/System/DB/mysql.pm - mysql database backend
-# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # --
-# $Id: mysql.pm,v 1.25 2007-10-02 10:36:03 mh Exp $
+# $Id: mysql.pm,v 1.26 2008-01-02 14:56:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.25 $) [1];
+$VERSION = qw($Revision: 1.26 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -35,12 +35,15 @@ sub LoadPreferences {
     my ( $Self, %Param ) = @_;
 
     # db settings
-    $Self->{'DB::Limit'}          = 'limit';
-    $Self->{'DB::DirectBlob'}     = 1;
-    $Self->{'DB::QuoteSingle'}    = '\\';
-    $Self->{'DB::QuoteBack'}      = '\\';
-    $Self->{'DB::QuoteSemicolon'} = '\\';
-    $Self->{'DB::Attribute'}      = {};
+    $Self->{'DB::Limit'}             = 'limit';
+    $Self->{'DB::DirectBlob'}        = 1;
+    $Self->{'DB::QuoteSingle'}       = '\\';
+    $Self->{'DB::QuoteBack'}         = '\\';
+    $Self->{'DB::QuoteSemicolon'}    = '\\';
+    $Self->{'DB::NoLikeInLargeText'} = 0;
+
+    # dbi attributes
+    $Self->{'DB::Attribute'} = {};
 
     # set current time stamp if different to "current_timestamp"
     $Self->{'DB::CurrentTimestamp'} = '';
@@ -52,9 +55,9 @@ sub LoadPreferences {
     $Self->{'DB::Comment'}     = '# ';
     $Self->{'DB::ShellCommit'} = ';';
 
-    #    $Self->{'DB::ShellConnect'} = '';
+    #$Self->{'DB::ShellConnect'} = '';
 
-    # init setting
+    # init sql setting on db connect
     if ( $Self->{ConfigObject}->Get('DefaultCharset') =~ /(utf(\-8|8))/i
         && !$Self->{ConfigObject}->Get('Database::ShellOutput') )
     {
