@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.531 2008-01-01 23:13:49 martin Exp $
+# $Id: CHANGES,v 1.532 2008-01-02 14:56:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,9 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2008/01/02) Fixed bug# 2600 - MS SQL: Fulltext search in ticket body with
+    mssql backend not possible (improved Kernel::System::DB API with database
+    preferences option "NoLikeInLargeText").
  - (2007/12/28) Improved config file mechanism of SysConfig to improve
     speed in mod_perl is used (about 0.2%-4% speed improvement, depends
     on shown site).
@@ -76,6 +79,8 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.5 (2008/??/??)
+ - (2008/01/02) Fixed bug# 2600 - MS SQL: Fulltext search in ticket body with
+    mssql backend not possible (workaround, improved API for 2.3.x).
  - (2008/01/01) Fixed bug# 1120 - TO recipients are dropped when replying to a
     ticket.
  - (2008/01/01) Fixed bug# 2589 - Ticket-title not shown in ticket list of
